# metin

./: .gitignore  AGENTS.md  BUILD_SUCCESS.md  CHANGELOG_DAYNIGHT.md  CHARACTER_CLASSES_UPDATE.md  CHARACTER_CREATION_FIX.md  COLLISION_COMPLETE.md  COLLISION_FINAL.md  COLLISION_PHASE2.md  COLLISION_PHASE2_SUMMARY.md  COLLISION_PHASE3.md  COLLISION_PHASE4.md  COLLISION_SYSTEM.md  COLLISION_TEST.md  Cargo.toml  DATABASE_PHASE1.md  DATABASE_PHASE2.md  DATABASE_PHASE3.md  DAYNIGHT_QUICKSTART.md  DAY_NIGHT_CYCLE.md  DEV_INTERFACE_UPDATE.md  DEV_LEVEL_DOWN_FIX.md  IMPLEMENTATION_SUCCESS.txt  LEVEL_DOWN_FINAL.md  LEVEL_DOWN_LEVEL100_FIX.md  LEVEL_SYSTEM.md  NAMEPLATE_FIX.md  NAMEPLATE_SYSTEM.md  NPC_IMPLEMENTATION_SUMMARY.md  NPC_SYSTEM_IMPLEMENTATION_PLAN.md  NPC_SYSTEM_TEST.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUICK_TEST_PHASE2.md  README.md  README_UI_STACK.md  SESSION_STATUS.md  SESSION_SUMMARY.md  SKILL_SYSTEM_DESIGN.md  SKILL_SYSTEM_IMPLEMENTATION.md  SKILL_SYSTEM_SUMMARY.md  (+19 more)
.serena/: project.yml
.serena/memories/: building_refinement_progress.md  city_layout_and_buildings.md  code_style_conventions.md  codebase_structure.md  (+4 more)
client/: Cargo.toml
client/src/: auth_state.rs  camera.rs  collision.rs  interaction.rs  main.rs  networking.rs  npc.rs  physics.rs  player.rs  player_OLD.rs  skybox.rs
client/src/building/: city.rs  decorations.rs  details.rs  floors.rs  medieval_kit.rs  mesh_combiner.rs  meshes.rs  mod.rs  optimized_spawner.rs
client/src/ui/: character_creation.rs  character_selection.rs  game_ui.rs  login.rs  mod.rs  npc_dialog.rs  pause.rs  settings.rs  ui_stack.rs
server/: Cargo.toml
server/migrations/: 001_create_users.sql  002_create_characters.sql  003_add_specialization.sql
server/src/: main.rs
server/src/auth/: handlers.rs  jwt.rs  mod.rs  password.rs  session.rs
server/src/db/: characters.rs  mod.rs  users.rs
server/tests/: auth_test.rs  db_test.rs  integration_test.rs  position_test.rs
shared/: Cargo.toml
(+1 files in other folders)
