[workspace]
resolver = "2"
members = [
    "server",
    "client",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Bevy
bevy = { version = "0.14", default-features = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Shared
shared = { path = "shared" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
