[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
bevy.workspace = true
serde.workspace = true
bincode.workspace = true
rayon = "1.10"  # Phase 4: Multi-Threading (Linux & Windows compatible)
parry3d = "0.17"  # Phase 3: High Detail Convex Hull (using latest stable version)
bevy_rapier3d = { version = "0.27", features = ["dim3"] }  # Professional physics engine - fixes all collision bugs!
