[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true

# Server specific
env_logger = "0.11"
log = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
